--- a/c/program/SConscript
+++ b/c/program/SConscript
@@ -7,4 +7,8 @@ env.MergeFlags({'LIBS' : ['genome', 'z']})
 
 prog = env.Program('split_wig_chrs', ['split_wig_chrs.c'])
 
+prog += env.Program('split_bed_chrs', ['split_bed_chrs.c'])
+
+prog += env.Program('test', ['test.c'])
+
 Depends(prog, libgenome)
