added short program to test fasta reading

--- a/c/program/SConscript
+++ b/c/program/SConscript
@@ -9,5 +9,7 @@ prog = env.Program('split_wig_chrs', ['split_wig_chrs.c'])
 
 prog += env.Program('split_bed_chrs', ['split_bed_chrs.c'])
 
+prog += env.Program('test_fasta', ['test_fasta.c'])
+
 
 Depends(prog, libgenome)
