--- a/c/lib/SConscript
+++ b/c/lib/SConscript
@@ -9,7 +9,7 @@ if 'PKG_CONFIG_PATH' in os.environ:
     env.PrependENVPath('PKG_CONFIG_PATH', os.environ['PKG_CONFIG_PATH'])
 env.ParseConfig("pkg-config --cflags --libs glib-2.0")
 
-srcfiles = ['util.c', 'wig.c', 'txtfile.c', 'aln.c',
+srcfiles = ['util.c', 'wig.c', 'txtfile.c', 'aln.c', 'fastq.c',
             'memutil.c', 'err.c', 'bedgraph.c', 'chr.c', 'seqcoord.c',
             'nuc.c', 'seq.c', 'xbf.c', 'config.c']
 
