--- a/c/program/SConscript
+++ b/c/program/SConscript
@@ -6,9 +6,8 @@ env = env.Clone()
 env.MergeFlags({'LIBS' : ['genome', 'z']})
 
 prog = env.Program('split_wig_chrs', ['split_wig_chrs.c'])
-
 prog += env.Program('split_bed_chrs', ['split_bed_chrs.c'])
-
+prog += env.Program('smith_waterman', ['smith_waterman.c'])
 prog += env.Program('test_fasta', ['test_fasta.c'])
 
 
